Fixed number alignment (#871)

--- a/src/client/src/components/TopNavBarLink/styles.module.css
+++ b/src/client/src/components/TopNavBarLink/styles.module.css
@@ -56,6 +56,8 @@
   width: 8px;
   height: 20px;
   padding: 5px 11px;
+  text-align: center;
+  line-height: 20px;
   border-radius: 100%;
   border: 1px solid var(--vscode-peekViewResult-lineForeground);
   flex-grow: 1;
